cpp/inspireface/c_api/inspireface.h


typedef enum HFImageFormat {
    HF_STREAM_RGB = 0,       
    HF_STREAM_BGR = 1,       
    HF_STREAM_RGBA = 2,      
    HF_STREAM_BGRA = 3,      
    HF_STREAM_YUV_NV12 = 4,  
    HF_STREAM_YUV_NV21 = 5,  
    HF_STREAM_I420 = 6,      
    HF_STREAM_GRAY = 7,      
} HFImageFormat;
typedef enum HFRotation {
    HF_CAMERA_ROTATION_0 = 0,    
    HF_CAMERA_ROTATION_90 = 1,   
    HF_CAMERA_ROTATION_180 = 2,  
    HF_CAMERA_ROTATION_270 = 3,  
} HFRotation;
typedef struct HFImageData {
    HPUInt8 data;          
    HInt32 width;          
    HInt32 height;         
    HFImageFormat format;  
    HFRotation rotation;   
} HFImageData, *PHFImageData;
HYPER_CAPI_EXPORT extern HResult HFCreateImageStream(PHFImageData data, PHFImageStream handle);
HYPER_CAPI_EXPORT extern HResult HFCreateImageStreamEmpty(PHFImageStream handle);
HYPER_CAPI_EXPORT extern HResult HFImageStreamSetBuffer(HFImageStream handle, HPUInt8 buffer, HInt32 width, HInt32 height);
HYPER_CAPI_EXPORT extern HResult HFImageStreamSetRotation(HFImageStream handle, HFRotation rotation);
HYPER_CAPI_EXPORT extern HResult HFImageStreamSetFormat(HFImageStream handle, HFImageFormat format);
HYPER_CAPI_EXPORT extern HResult HFReleaseImageStream(HFImageStream streamHandle);
typedef struct HFImageBitmapData {
    HPUInt8 data;     
    HInt32 width;     
    HInt32 height;    
    HInt32 channels;  
} HFImageBitmapData, *PHFImageBitmapData;
HYPER_CAPI_EXPORT extern HResult HFCreateImageBitmap(PHFImageBitmapData data, PHFImageBitmap handle);
HYPER_CAPI_EXPORT extern HResult HFCreateImageBitmapFromFilePath(HPath filePath, HInt32 channels, PHFImageBitmap handle);
HYPER_CAPI_EXPORT extern HResult HFImageBitmapCopy(HFImageBitmap handle, PHFImageBitmap copyHandle);
HYPER_CAPI_EXPORT extern HResult HFReleaseImageBitmap(HFImageBitmap handle);
HYPER_CAPI_EXPORT extern HResult HFCreateImageStreamFromImageBitmap(HFImageBitmap handle, HFRotation rotation, PHFImageStream streamHandle);
HYPER_CAPI_EXPORT extern HResult HFCreateImageBitmapFromImageStreamProcess(HFImageStream streamHandle, PHFImageBitmap handle, HInt32 is_rotate,
                                                                           HFloat scale);