cpp/inspireface/c_api/intypedef.h


typedef void*               HFImageStream;                    
typedef void**              PHFImageStream;                   
typedef void*               HFSession;                        
typedef void**              PHFSession;                       
typedef void*               HFImageBitmap;                    
typedef void**              PHFImageBitmap;                   
typedef void*               HFFaceResultSnapshot;             
typedef void**              PHFFaceResultSnapshot;            
typedef void*               HPVoid;                           
typedef float               HFloat;                           
typedef float*              HPFloat;                          
typedef unsigned char*      HPUInt8;                          
typedef signed int			HInt32;                           
typedef signed int			HOption;                          
typedef signed int*			HPInt32;                          
typedef int32_t             HFStatus;                         
typedef uint32_t            HFUInt32;                         
typedef uint64_t            HFUInt64;                         
typedef int64_t             HFaceId;                          
typedef int64_t*            HPFaceId;                         
typedef long                HResult;                          
typedef char*               HString;                          
typedef const char*         HPath;                            
typedef const char*         HFormat;                          
typedef char                HChar;                            
typedef char*               HPBuffer;                         
typedef struct HFaceRect {
    HInt32 x;                                                 
    HInt32 y;                                                 
    HInt32 width;                                             
    HInt32 height;                                            
} HFaceRect, *PHFaceRect;                                     
typedef struct HPoint2f{
    HFloat x;                                                 
    HFloat y;                                                 
} HPoint2f, *PHPoint2f;
typedef struct HPoint2i{
    HInt32 x;                                                 
    HInt32 y;                                                 
} HPoint2i, *PHPoint2i;
typedef struct HColor {
    HFloat r;                                                 
    HFloat g;                                                 
    HFloat b;                                                 
} HColor, *PHColor;